updated width styling for responsive sizing so it no longer loads page slightly zoomed in on mobile (width: 100%  -->  width : auto)

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ hr {
 @media only screen and (max-width: 600px) {
   .content {
     float: none;
-    width: 100%;
+    width: auto;
     padding: 20px;
   }
 }
