--- a/src/components/bottomLinks/style.css
+++ b/src/components/bottomLinks/style.css
@@ -1,6 +1,6 @@
 .bottom-links {
     margin-bottom: 20px;
-    width: 100%;
+    width: auto;
 }
 
 .bottom-link {
