--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -1,5 +1,5 @@
 .navbar {
-    width: 100%;
+    width: auto;
     padding: 20px;
 }
 
